added n reports to page title

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -231,6 +231,7 @@
                 Status - {{ status }}
             {% endif %}
         {% endblock %}
+            <br><strong>Reports Matching Current Filter/Search Criteria:</strong> {{ n_query_records }}
 
 
         <div style="text-align: left">
