--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -231,7 +231,7 @@
                 Status - {{ status }}
             {% endif %}
         {% endblock %}
-            <br><strong>Reports Matching Current Filter/Search Criteria:</strong> {{ n_query_records }}
+            <br><strong>Reports Matching Current Filter/Search Criteria:</strong> <span class="badge">{{ n_query_records }}</span>
 
 
         <div style="text-align: left">
