--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -719,7 +719,11 @@ function map_init_basic(map, options) {
     coverage_fg.addTo(map);
 
     {% if fullscreen != 'off' or map_type == 'coverage' %}
-    get_coverage_data(0, {{ last_coverage_id }}, map);
+    var cov_step = 1000;
+    for (var start_id = 0; start_id <= {{ last_coverage_id }}; start_id = start_id + cov_step) {
+        get_coverage_data(start_id, start_id + cov_step -1, map);
+    }
+
     {% endif %}
 
     for (var d = {{ end_day }}; d >= {% if fullscreen == 'off' and year == '2015' %}202{% else %}0{% endif %}; d--) {
