--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -617,82 +617,34 @@ function apply_filter() {
 }
 
 
-function get_data(day, map) {
-    var csrftoken = $.cookie('csrftoken');
+function get_data(map) {
     $.ajax({
-        url: 'http://{{ domain }}/static/all_reports' + day + '.json',
+        url: 'http://{{ domain }}/static/all_reports{% if fullscreen == 'off' %}{{ year }}{% endif %}.json',
         dataType: 'json',
-        headers: {
-            'Authorization': 'Token 7UWSnsNsRBdIgYwfEPeJYWEdeZmRzlh1shlQ'
-        },
-        beforeSend: function (xhr, settings) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-        },
         success: function (data) {
 
             if (data != null && data.length > 0) {
-
                 add_to_layer(data, markers_clustered, true);
                 full_data = full_data.concat(data);
-
-            }
-            percent_done = Math.floor(100 * day_just_finished++/{% if fullscreen == 'off' and year == '2015' %}({{ end_day }}-202){% else %}{{ end_day }}{% endif %});
-            progress_bar.css("width", percent_done.toString() + "%");
-            if (percent_done > 10) {
-                progress_bar.html(percent_done.toString() + "%");
-            }
-            if (percent_done >= 100) {
+                progress_bar.css("width", percent_done.toString() + "%");
                 progress_bar_container.fadeOut(2000);
-
             }
         }
     });
 }
 
 
-function get_coverage_data(id_start, id_stop, map) {
-    var csrftoken = $.cookie('csrftoken');
+function get_coverage_data(map) {
     $.ajax({
-        url: 'http://{{ domain }}/api/coverage_month/?id_range_start=' + id_start + '&id_range_end=' + id_stop,
+        url: 'http://{{ domain }}/static/coverage_month_data.json',
         contentType: 'application/json',
         dataType: 'json',
-        headers: {
-            'Authorization': 'Token 7UWSnsNsRBdIgYwfEPeJYWEdeZmRzlh1shlQ'
-        },
-        beforeSend: function (xhr, settings) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-        },
         success: function (data) {
-
 
             if (data != null && data.length > 0) {
                 full_coverage_data = full_coverage_data.concat(data);
-
                 apply_filter();
-
             }
-
-        }
-    });
-}
-
-
-function update_coverage_data() {
-    var csrftoken = $.cookie('csrftoken');
-    $.ajax({
-        url: 'http://{{ domain }}/api/update_coverage_month/',
-        contentType: 'application/json',
-        dataType: 'json',
-        headers: {
-            'Authorization': 'Token 7UWSnsNsRBdIgYwfEPeJYWEdeZmRzlh1shlQ'
-        },
-        beforeSend: function (xhr, settings) {
-            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-        },
-        success: function (data) {
-
-            // do nothing (user will not always have the most updated data, since it will update after grabbing it, but this way the user gets the data fast and it is updated for the next call
-
         }
     });
 }
@@ -718,20 +670,14 @@ function map_init_basic(map, options) {
     coverage_fg.addTo(map);
 
 
-        get_data(1, map);
+    get_data(map);
 
     {% if fullscreen != 'off' or map_type == 'coverage' %}
-    var cov_step = 1000;
-    for (var start_id = 0; start_id <= {{ last_coverage_id }}; start_id = start_id + cov_step) {
-        get_coverage_data(start_id, start_id + cov_step -1, map);
-    }
-
+    get_coverage_data(map);
     {% endif %}
 
 
 
-// TURNING OFF FOR NOW UNTIL WE WORK OUT THE LONG REQUEST ISSUE
-//    update_coverage_data();
 
 }
 
