--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -626,6 +626,7 @@ function get_data(map, year, prog_percent) {
             if (data != null && data.length > 0) {
                 add_to_layer(data, markers_clustered, true);
                 full_data = full_data.concat(data);
+                progress_bar.css('transition', '500ms linear');
                 progress_bar.css('width', prog_percent.toString() + '%');
                 if(prog_percent == 100){
                     progress_bar_container.fadeOut(2000);
