added 2016 to map selector again

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -737,6 +737,7 @@ function map_init_basic(map, options) {
                                 <div class="form-group">
                                     <select id="year_select" class="selectpicker show-tick form-control"
                                             data-style="btn-primary" onchange="update_filters()">
+                                        <option value="2016">2016</option>
                                         <option value="2015">2015</option>
                                         <option value="2014">2014</option>
                                         <option value="0">{% trans 'fmap_All_years' %}</option>
