preventing browsers from caching map data json file

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -616,6 +616,7 @@ function apply_filter() {
     }
 }
 
+$.ajaxSetup({ cache: false });
 
 function get_data(map, year, prog_percent) {
     $.ajax({
