--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -114,7 +114,10 @@
 {% endblock %}
 
 <script>
-    var selected_year = 0;
+    var selected_year = parseInt("{{year}}");
+    if (selected_year == null || isNaN(selected_year) || !isFinite(selected_year) ){
+	selected_year = 0;
+    }
     var selected_month = 0;
     var selected_type = "{{ map_type }}";
     var selected_validation = parseInt("{{ validation_score }}");
