modifications to Spanish versions of terms etc for testing on humboldt

--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -15,11 +15,19 @@
 
     <p>Este proyecto es posible gracias a la implicación creciente de muchas entidades públicas y privadas, así como el apoyo de muchos profesionales.</p>
 
-    <p>El proyecto está coordinado por el <a href="http://www.movelab.net/">ICREA Movement Ecology Lab</a> del <a href="http://www.ceab.csic.es/">Centro de Estudios Avanzados de Blanes</a> del <a href="http://www.csic.es/">Consejo Superior de Investigaciones Científicas</a> (CEAB-CSIC), y asociado al <a href="http://www.creaf.cat/es">Centro de Investigación Ecológica y Aplicaciones Forestales</a> (CREAF).</p>
+    <p>El proyecto está coordinado por el ICREA Movement Ecology Lab del Centro de Estudios Avanzados de Blanes del Consejo Superior de Investigaciones Científicas (CEAB-CSIC), y asociado al Centro de Investigación Ecológica y Aplicaciones Forestales (CREAF).</p>
 
-    <p>El proyecto está cofinanciado por la <a href="http://www.fecyt.es/">Fundación Española para la Ciencia y la Tecnología</a> (FECYT) y el Ministerio de Economía y Competitividad. Hacen posible este proyecto además la Obra Social “la Caixa”, el programa de ayudas a la investigación <a href="http://www.recercaixa.cat/ca/index.html">Recercaixa</a>, dentro del marco del proyecto “<a href="https://www.youtube.com/watch?v=XGEujAO0jdk">Ciencia ciudadana: educación e investigación</a>“ y la empresa <a href="http://www.lokimica.com/">lokímica</a>.</p>
+    <p>El proyecto ha sido impulsada por la Fundación Bancaria" la Caixa.</p>
 
-    <p>Las fotografías de la App Tigatrapp han sido cedidas por <a href="http://www.eritja.com">R. Eritja</a>.</p>
+   <p class='centeredImage'>
+        <a href='/credits/'><img style='max-width: 100%; height: auto;' src
+                ={% static "tigahelp/lacaixa.jpg" %}></a>
+    </p>
+
+
+    <p>El proyecto está cofinanciado por el Organismo Autónomo de Salud Pública de la Diputación de Girona (Dipsalut), el Ministerio de Economía y Competitividad, la Fundación Española para la Ciencia y la Tecnología (FECYT) yy la empresa lokímica.</p>
+
+    <p>Las fotografías de la App Tigatrapp han sido cedidas por R. Eritja.</p>
 
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src
