--- a/tigahelp/templates/tigahelp/license_ca.html
+++ b/tigahelp/templates/tigahelp/license_ca.html
@@ -2,16 +2,16 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Tigatrapp License
+    Mosquito Alert License
 {% endblock %}
 
 
 {% block content %}
     <div class="center">
-        <h1>Tigatrapp</h1>
+        <h1>Mosquito Alert</h1>
     </div>
 
-    <p>Tigatrapp és una aplicació que busca aprofitar el gran potencial de la ciutadania per a col·laborar en la recerca
+    <p>Mosquito Alert (anteriorment Tigatrapp) és una aplicació que busca aprofitar el gran potencial de la ciutadania per a col·laborar en la recerca
         del mosquit tigre, gràcies a l'ús de les noves tecnologies. És, per tant, un exemple del potencial de les
         ciències ciutadanes. L'aplicació ha sigut desenvolupada pel grup de recerca <a href="http://movelab.net">Movement
             Ecology Lab</a> del Centre d'Estudis Avançats de Blanes (CEAB-CSIC). El codi font està en part basat en codi
@@ -20,9 +20,9 @@
         Kathleen Li i Necati E. Ozgencil). El codi font de Tigatrapp està disponible al grup de recerca Movement Ecology
         Lab.</p>
 
-    <p>Copyright &#169; 2013, 2014 John R.B. Palmer, Aitana Oltra, Joan Garriga i Frederic Bartumeus</p>
+    <p>Copyright &#169; 2013-2016 John R.B. Palmer, Aitana Oltra, Joan Garriga i Frederic Bartumeus</p>
 
-    <p> Tigatrapp és programari lliure: es pot redistribuir i/o modificar sota els termes de la llicència general
+    <p> Mosquito Alert és programari lliure: es pot redistribuir i/o modificar sota els termes de la llicència general
         pública GNU General Public License publicada per Free Software Foundation (versió 3 de la llicència o
         superior)</p>
 
