--- a/tigahelp/templates/tigahelp/license_en.html
+++ b/tigahelp/templates/tigahelp/license_en.html
@@ -2,16 +2,16 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Tigatrapp License
+    Mosquito Alert License
 {% endblock %}
 
 
 {% block content %}
 <div class="center">
-<h1>Tigatrapp</h1>
+<h1>Mosquito Alert</h1>
 </div>
 
-<p>Tigatrapp is an application that harnesses the power of citizen scientists and new technologies to  
+<p>Mosquito Alert (formerly Tigatrapp) is an application that harnesses the power of citizen scientists and new technologies to
 investigate the spread of Tiger Mosquitoes in Spain. 
 The application was developed by the 
  <a href="http://movelab.net">Movement Ecology Laboratory</a> of the Center for Advanced Studies of Blanes (CEAB-CSIC).
@@ -19,9 +19,9 @@ The application was developed by the
  (Chang Y. Chung, Kathleen Li and Necati E. Ozgencil). 
  The Tigatrapp code is freely available from the Movement Ecology Lab.</p>
 
-<p>Copyright &#169; 2013, 2014 John R.B. Palmer, Aitana Oltra, Joan Garriga and Frederic Bartumeus</p>
+<p>Copyright &#169; 2013-2016 John R.B. Palmer, Aitana Oltra, Joan Garriga and Frederic Bartumeus</p>
  
-<p>Tigatrapp is free software: you can redistribute it and/or modify 
+<p>Mosquito Alert is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by 
  the Free Software Foundation, either version 3 of the License, or (at 
   your option) any later version.</p>
