--- a/tigahelp/templates/tigahelp/license_es.html
+++ b/tigahelp/templates/tigahelp/license_es.html
@@ -2,20 +2,20 @@
 {% load staticfiles %}
 
 {% block page_title %}
-    Tigatrapp License
+    Mosquito Alert License
 {% endblock %}
 
 
 {% block content %}
 <div class="center">
-<h1>Tigatrapp</h1>
+<h1>Mosquito Alert</h1>
 </div>
 
-<p>Tigatrapp es una aplicación que busca aprovechar el gran potencial que puede tener la ciudadanía en el estudio del mosquito tigre, gracias a las nuevas tecnologías. Es, por lo tanto, un ejemplo del potencial de las ciencias ciudadanas. La aplicación ha sido desarrollada por el grupo de investigación <a href="http://movelab.net">Movement Ecology Lab</a> del Centro de Estudios Avanzados de Blanes (CEAB-CSIC). El código fuente está en parte basado en código de la aplicación "<a href="http://www.activityspaceproject.com/">Space Mapper</a>" (desarrollada por John RB Palmer), y código de "<a href="http://pmp.princeton.edu/">The Human Mobility Project</a>" (Chang Y. Chung, Kathleen Li y Necati E. Ozgencil). El código fuente de Tigatrapp está disponible en el grupo de investigación Movement Ecology Lab.</p>
+<p>Mosquito Alert (antes Tigatrapp) es una aplicación que busca aprovechar el gran potencial que puede tener la ciudadanía en el estudio del mosquito tigre, gracias a las nuevas tecnologías. Es, por lo tanto, un ejemplo del potencial de las ciencias ciudadanas. La aplicación ha sido desarrollada por el grupo de investigación <a href="http://movelab.net">Movement Ecology Lab</a> del Centro de Estudios Avanzados de Blanes (CEAB-CSIC). El código fuente está en parte basado en código de la aplicación "<a href="http://www.activityspaceproject.com/">Space Mapper</a>" (desarrollada por John RB Palmer), y código de "<a href="http://pmp.princeton.edu/">The Human Mobility Project</a>" (Chang Y. Chung, Kathleen Li y Necati E. Ozgencil). El código fuente de Tigatrapp está disponible en el grupo de investigación Movement Ecology Lab.</p>
 
-<p>Copyright &#169; 2013, 2014 John R.B. Palmer, Aitana Oltra, Joan Garriga y Frederic Bartumeus</p>
+<p>Copyright &#169; 2013-2016 John R.B. Palmer, Aitana Oltra, Joan Garriga y Frederic Bartumeus</p>
  
-<p> Tigatrapp es software libre: se puede redistribuir y/o modificar bajo los términos de la licencia general pública GNU General Public License publicada por Free Software Foundation (versión 3 de la licencia o superior)</p>
+<p> Mosquito Alert es software libre: se puede redistribuir y/o modificar bajo los términos de la licencia general pública GNU General Public License publicada por Free Software Foundation (versión 3 de la licencia o superior)</p>
 
 <p>This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
