--- a/tigahelp/templates/tigahelp/privacy_ca.html
+++ b/tigahelp/templates/tigahelp/privacy_ca.html
@@ -12,7 +12,7 @@
         <h2>Política de privacitat</h2>
     </div>
 
-    <p>El projecte AtrapaelTigre recull dades compartides pels voluntaris i les posa a disposició de terceres parts i
+    <p>El projecte Mosquito Alert recull dades compartides pels voluntaris i les posa a disposició de terceres parts i
         del públic general. Per tal de protegir la privacitat dels seus voluntaris, s'evita la recopilació d'informació
         que pugui identificar de manera individual una persona física determinada. Així, no es recopilen noms, adreces,
         contrasenyes o qualsevol altra informació personal dels voluntaris. Sí que es recullen les ubicacions exactes
@@ -22,7 +22,7 @@
         aquesta informació també es vincula únicament a un identificador d'usuari generat de manera aleatòria. Els
         voluntaris poden incloure notes i fotografies en els seus informes, però és la seva responsabilitat no incloure
         en aquestes notes i fotografies qualsevol informació que desitgin mantenir en privat o qualsevol informació que
-        violi els drets de privacitat dels altres o sigui incompatible amb l'acord de l'usuari d'AtrapaelTigre.</p>
+        violi els drets de privacitat dels altres o sigui incompatible amb l'acord de l'usuari de Mosquito Alert.</p>
 
     <p>La llista detallada de la informació recopilada és la següent :</p>
     <ul>
