--- a/tigahelp/templates/tigahelp/privacy_es.html
+++ b/tigahelp/templates/tigahelp/privacy_es.html
@@ -12,7 +12,7 @@
         <h2>Política de privacidad</h2>
     </div>
 
-    <p>El proyecto AtrapaelTigre recoge datos compartidos por los voluntarios y los pone a disposición de terceras
+    <p>El proyecto Mosquito Alert recoge datos compartidos por los voluntarios y los pone a disposición de terceras
         partes y del público general. Con el fin de proteger la privacidad de sus voluntarios, se evita la recopilación
         de información que pueda identificar de manera individual a una persona física determinada. Así, no se recopilan
         nombres, direcciones, contraseñas o cualquier otra información personal de los voluntarios. Sí que se recogen
@@ -23,7 +23,7 @@
         usuario generado de manera aleatoria. Los voluntarios pueden incluir notas y fotografías en sus informes, pero
         es su responsabilidad no incluir en estas notas y fotografías cualquier información que deseen mantener en
         privado o cualquier información que viole los derechos de privacidad de los demás o sea incompatible con el
-        acuerdo del usuario de AtrapaelTigre.</p>
+        acuerdo del usuario de Mosquito Alert.</p>
 
     <p>La lista detallada de la información recopilada es la siguiente:</p>
     <ul>
