--- a/tigahelp/templates/tigahelp/privacy_en.html
+++ b/tigahelp/templates/tigahelp/privacy_en.html
@@ -12,7 +12,7 @@
         <h2>Privacy Policy</h2>
     </div>
 
-<p>The AtrapaelTigre project takes data shared by volunteers and it makes
+<p>The Mosquito Alert project takes data shared by volunteers and it makes
 this data available to third parties and the public. In order the protect the privacy of its volunteers,
 the project aims to avoid collecting information from which any individual may be personally identified. It does not
 collect names, addresses, passwords, or any other personal information from volunteers. It collects the
@@ -23,7 +23,7 @@ volunteers are monitoring for mosquitoes),
 but these locations are again linked only to randomly-generated user IDs. Volunteers may include notes and
 photographs in the reports they submit, but it is their responsibility not to include in these notes and photographs
 any information that they wish to keep private or any information that violates the privacy rights of others or is
-inconsistent with the AtrapaelTigre terms of use.</p>
+inconsistent with the Mosquito Alert terms of use.</p>
 
 <p>The full list of information collected is as follows:</p>
 <ul>
