--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -9,7 +9,7 @@
 {% block content %}
 
     <div class="center">
-        <h1>Sobre Tigatrapp</h1>
+        <h1>Sobre Mosquito Alert</h1>
     </div>
 
 
